--- a/package.json
+++ b/package.json
@@ -12,11 +12,19 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
+    "@vue/tsconfig": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.512.0",
+    "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.8",
+    "tw-animate-css": "^1.3.3",
     "vue": "^3.5.13"
   },
   "devDependencies": {
+    "@types/node": "^22.15.29",
     "@vitejs/plugin-vue": "^5.2.3",
+    "@vue/runtime-core": "^3.5.16",
     "gh-pages": "^6.3.0",
     "vite": "^6.3.5"
   }
