feat(projects): add dynamic project card

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -10,7 +10,8 @@
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
-    
+    "resolveJsonModule": true,
+
     "baseUrl": ".",
     "paths": {
       "@/*": [
